--- a/style.css
+++ b/style.css
@@ -1,5 +1,49 @@
+@import url(./src/components/Media-queries/media-queries.css);
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 :root {
-  font-family: ;
+  --color-1: #0c0c0c;
+  --color-2: #e60022;
+}
+* {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+body {
+  width: 100%;
+  min-width: 360px;
+  height: 100svh;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  margin: 40px;
+}
+
+h1 {
+  color: var(--color-2);
+  margin-right: 50px;
+}
+
+main {
+  width: 100%;
+}
+
+footer {
+  width: 100%;
+  height: 100px;
 }
